--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,10 +1,8 @@
 name: Generate Pac-Man Graph
 
 on:
-  # รันทุกๆ เที่ยงคืน
   schedule:
     - cron: "0 0 * * *"
-  # อนุญาตให้กดรันเองได้
   workflow_dispatch:
 
 jobs:
@@ -18,13 +16,11 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Generate Pac-Man
-        uses: k-ochi/github-profile-eating-pacman-meme@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: ${{ github.repository_owner }}
+        uses: abozanona/pacman-contribution-graph@main
+        with:
+          github_user_name: ${{ github.repository_owner }}
           
       - name: Push to branch
-        # คำสั่งนี้จะดันไฟล์รูปภาพขึ้นไปที่ Branch หลักของคุณ
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
